# aionetiface

./: .gitignore  CLAUDE.md  CREDITS.md  JenkinsFile  MANIFEST.in  README.md  optional-server-requirements.txt  optional-test-requirements.txt  pyproject.toml  setup.py  test.py  todo.txt
docs/: .readthedocs.yaml  PCAP_SETUP_WINDOWS_XP.md
docs/diagrams/: tcp_hole_punching_detailed.graphml
docs/examples/: example_1.py  example_10.py  example_11.py  example_12.py  example_13.py  example_14.py  example_15.py  example_16.py  example_17.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  example_9.py  node_with_config.py  node_with_nickname.py  p2p_connect_with_nickname.py  p2p_tcp_con.py  p2pd_in_a_nutshell.py  portable_netifaces.py  tcp_direct_connect.py  tcp_hole_punch.py  tcp_reverse_connect.py  udp_turn_relay.py
docs/source/: conf.py  index.rst
examples/: fd_between_proc.py  fd_transfer_v2.py  fd_transfer_v3.py  punch.py  stun_test.py  upnp_multicast.py
examples/functional/: defs.py  error.py  (+3 more)
notes/: dns.txt  main.txt
scripts/: concurrency_bottlenecks.py  forward_android.bat  gen_keys.py  gen_stun_server_list.py  net_debug.php  prune_pnp_db.py  run_pnp_serv.py  test_pnp_from_server.py
tests/: __init__.py  conftest.py  example.py  port_helpers.py  run_tests.py  should_bug.py  simple.py  stun_change.py  test_35.py  test_address.py  test_bind.py  test_clock_skew.py  test_cmd.py  test_daemon.py  test_event_loops.py  test_hello_world.py  test_http_client_lib.py  test_interface.py  test_ip_range.py  test_ipv6.py  test_link_local_daemon.py  test_nat.py  test_net.py  test_net_afs.py  test_netifaces_parsers.py  test_p2p_addr.py  test_p2pd_server.py  test_pcap_backend.py  test_pcap_live_loopback.py  test_pcap_pipe_shim.py  test_pcap_state.py  test_pcap_wire.py  test_pipe.py  test_py_examples.py  test_route.py  test_route_table.py  test_rudp.py  test_signaling.py  test_sock.py  test_sorted_search.py  (+7 more)
(+146 files in other folders)
